[Megan] Dynamically create container event listeners

--- a/css/flexbox/flexbox.html
+++ b/css/flexbox/flexbox.html
@@ -1,7 +1,8 @@
-<html>
+<html lang="en">
   <head>
     <title>Flexbox</title>
     <link rel="stylesheet" type="text/css" href="flexbox.css">
+    <meta name="google" content="notranslate">
   </head>
   <body>
     <div id="visual">
